crates/stoffel-rust-sdk/tests/ui/generated_client_io_wrong_missing_input.stderr
error[E0063]: missing field `input_5` in initializer of `Client0Inputs`
 --> tests/ui/generated_client_io_wrong_missing_input.rs:8:19
  |
8 |     let _inputs = Client0Inputs {
  |                   ^^^^^^^^^^^^^ missing `input_5`
